# Autonomous-Engineering-Agent-with-Telegram

./: .env.example  .gitignore  README.md  config.toml  mise.toml  pyproject.toml
docs/: diagram.mermaid
scripts/: doctor.sh
src/agent/: __main__.py  bot.py  claude_runner.py  commands.py  config.py  git_ops.py  jira.py  prompt.py  queue.py  session.py  socket_server.py
src/ask_user_mcp/: server.py
systemd/: agent-bot.service
templates/: prompt.md.j2
