[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot[ext]>=21,<22",
  "httpx>=0.27",
  "jinja2>=3.1",
  "fastmcp>=0.4",
  "tomli-w>=1.0",
  "anyio>=4.4",
]

[project.scripts]
agent-bot = "agent.__main__:main"
ask-user-mcp = "ask_user_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/ask_user_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
